package service;

public interface Exportable {
    void export();
}
